Created Video and Playlist components

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
     <!-- Configure SystemJS -->
+    <!--It adds .js extension to each import, so you don't have to do it manually-->
     <script>
         System.config({
             packages: {
